istio-config/istio/destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: devops-destination
spec:
  host: project-devops
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
