istio-config/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: project-devops
spec:
  hosts:
  - "*"
  gateways:
  - devops-gateway
  http:
  - route:
    - destination:
        subset: v1
        host: project-devops
        port:
          number: 3000
      weight: 50
    - destination:
        subset: v2
        host: project-devops
        port:
          number: 3000
      weight: 50
